# proxy-ai-fusion

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  bunfig.toml  dev.sh  package.json  rustfmt.toml  tsconfig.json
frontend/: .npmrc  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/public/locales/: en.json  zh.json
frontend/src/: App.tsx
frontend/src/components/: ConfigPanel.tsx  DashboardPanel.tsx  ErrorBoundary.tsx  LoadBalancerPanel.tsx  LogsPanel.tsx  RequestMonitor.tsx
frontend/src/hooks/: useTranslation.ts
frontend/src/services/: api.ts  i18n.ts  websocket.ts
public/: index.html
public/assets/: main.css  main.js  styles.css
public/locales/: en.json  zh.json
scripts/: cli.ts  dev.ts
server/: index.ts
server/config/: manager.ts  types.ts
server/logging/: database.ts  logger.ts
server/proxy/: baseProxyService.ts  claudeProxyService.ts  codexProxyService.ts  service.ts
server/routing/: loadbalancer.ts
src/: App.tsx  daemon.rs  error.rs  main.rs  main.tsx
src/components/: ConfigPanel.tsx  DashboardPanel.tsx  DocsPanel.tsx  FeedbackProvider.tsx  LoadBalancerPanel.tsx  LogsPanel.tsx
src/config/: config_manager.rs  mod.rs  service_config.rs
src/logging/: mod.rs  request_logger.rs  usage_parser.rs
src/proxy/: proxy_service.rs
src/realtime/: mod.rs  realtime_hub.rs
src/routing/: load_balancer.rs  mod.rs
src/services/: api.ts
src/styles/: globals.css
src/types/: common.ts  loadbalancer.ts
src/web/: mod.rs  routes.rs  web_server.rs
(+4 files in other folders)
