[package]
name = "proxy-ai-fusion"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "paf"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async utilities
tokio-stream = "0.1"
async-stream = "0.3"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Directory utilities
dirs = "5.0"

# URL parsing
url = "2.5"

# Open URL in browser
open = "5.0"

# Embed static files
rust-embed = { version = "8.0", features = ["compression"] }
mime_guess = "2.0"

# Process management
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
